--- a/manifest/node-exporter-daemonset.yaml
+++ b/manifest/node-exporter-daemonset.yaml
@@ -34,13 +34,13 @@ spec:
             - name: sys
               mountPath: /host/sys
               readOnly: true
-          resources:
-            limits:
-              cpu: 10m
-              memory: 50Mi
-            requests:
-              cpu: 10m
-              memory: 50Mi
+          #resources:
+            #limits:
+              #cpu: 10m
+              #memory: 50Mi
+            #requests:
+              #cpu: 10m
+              #memory: 50Mi
       hostNetwork: true
       hostPID: true
       volumes:
