--- a/manifest/prometheus-statefulset.yaml
+++ b/manifest/prometheus-statefulset.yaml
@@ -53,11 +53,10 @@ spec:
               port: 9090
             initialDelaySeconds: 30
             timeoutSeconds: 30
-          # based on 10 running nodes with 30 pods each
-          resources:
-            requests:
-              cpu: 200m
-              memory: 1000Mi
+          #resources:
+            #requests:
+              #cpu: 200m
+              #memory: 1000Mi
           volumeMounts:
             - name: config-volume
               mountPath: /etc/config
