--- a/manifest/prometheus-statefulset.yaml
+++ b/manifest/prometheus-statefulset.yaml
@@ -83,7 +83,7 @@ spec:
       name: prometheus-data
       labels: *Labels
     spec:
-      storageClassName: standard
+      storageClassName: ${STORAGE_CLASS}
       accessModes:
         - ReadWriteOnce
       resources:
