--- a/manifest/01-grafana-dashboardproviders.yaml
+++ b/manifest/01-grafana-dashboardproviders.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: grafana-dashboardproviders
-  namespace: ${NAMESPACE}
+  namespace: prometheus
   labels:
     app.kubernetes.io/name: prometheus
 data:
