--- a/manifest/01-grafana-dashboards-configmap.yaml
+++ b/manifest/01-grafana-dashboards-configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: dashboards
+  namespace: prometheus
   labels:
     app.kubernetes.io/name: prometheus
     app.kubernetes.io/component: grafana
