--- a/manifest/01-grafana-ini-confimap.yaml
+++ b/manifest/01-grafana-ini-confimap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: grafana-ini
-  namespace: ${NAMESPACE}
+  namespace: prometheus
   labels:
     app.kubernetes.io/name: prometheus
     app.kubernetes.io/component: grafana
