--- a/manifest/01-prometheus-configmap-configmap.yaml
+++ b/manifest/01-prometheus-configmap-configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: prometheus-config
-  namespace: ${NAMESPACE}
+  namespace: prometheus
   labels:
     app.kubernetes.io/name: prometheus
     app.kubernetes.io/component: prometheus
@@ -284,9 +284,9 @@ data:
     rejected\"\n    \"expr\": |\n      increase(prometheus_target_scrapes_sample_duplicate_timestamp_total{job=\"prometheus\"}[5m])
     > 0\n    \"for\": \"10m\"\n    \"labels\": \n      \"severity\": \"warning\"\n"
   prometheus.yaml: "\"alerting\": \n  \"alertmanagers\": \n  - \"kubernetes_sd_configs\":
-    \n    - \"namespaces\": \n        \"names\": \n        - \"${NAMESPACE}\"\n      \"role\":
+    \n    - \"namespaces\": \n        \"names\": \n        - \"prometheus\"\n      \"role\":
     \"endpoints\"\n    \"path_prefix\": \"/\"\n    \"relabel_configs\": \n    - \"action\":
-    \"keep\"\n      \"regex\": \"${NAMESPACE};alertmanager\"\n      \"source_labels\":
+    \"keep\"\n      \"regex\": \"prometheus;alertmanager\"\n      \"source_labels\":
     \n      - \"__meta_kubernetes_namespace\"\n      - \"__meta_kubernetes_service_label_k8s_app\"\n
     \   - \"action\": \"keep\"\n      \"regex\": \"http\"\n      \"source_labels\":
     \n      - \"__meta_kubernetes_endpoint_port_name\"\n    \"scheme\": \"http\"\n
@@ -336,7 +336,7 @@ data:
     \ \"relabel_configs\": \n  - \"action\": \"labelmap\"\n    \"regex\": \"__meta_kubernetes_service_label_(.+)\"\n
     \ - \"action\": \"replace\"\n    \"regex\": \"([^:]+)(?::\\\\d+)?\"\n    \"replacement\":
     \"$1:9093\"\n    \"source_labels\": \n    - \"__address__\"\n    \"target_label\":
-    \"__address__\"\n  - \"action\": \"keep\"\n    \"regex\": \"${NAMESPACE};alertmanager\"\n
+    \"__address__\"\n  - \"action\": \"keep\"\n    \"regex\": \"prometheus;alertmanager\"\n
     \   \"source_labels\": \n    - \"__meta_kubernetes_namespace\"\n    - \"__meta_kubernetes_service_label_k8s_app\"\n
     \ - \"action\": \"replace\"\n    \"source_labels\": \n    - \"__meta_kubernetes_namespace\"\n
     \   \"target_label\": \"namespace\"\n  - \"action\": \"replace\"\n    \"source_labels\":
@@ -371,7 +371,7 @@ data:
     \"instance\"\n- \"job_name\": \"kube-state-metrics\"\n  \"kubernetes_sd_configs\":
     \n  - \"role\": \"service\"\n  \"relabel_configs\": \n  - \"action\": \"labelmap\"\n
     \   \"regex\": \"__meta_kubernetes_service_label_(.+)\"\n  - \"action\": \"keep\"\n
-    \   \"regex\": \"${NAMESPACE};kube-state-metrics\"\n    \"source_labels\": \n
+    \   \"regex\": \"prometheus;kube-state-metrics\"\n    \"source_labels\": \n
     \   - \"__meta_kubernetes_namespace\"\n    - \"__meta_kubernetes_service_label_k8s_app\"\n-
     \"job_name\": \"kubelet\"\n  \"kubernetes_sd_configs\": \n  - \"role\": \"node\"\n
     \ \"relabel_configs\": \n  - \"action\": \"labelmap\"\n    \"regex\": \"__meta_kubernetes_node_label_(.+)\"\n
@@ -382,7 +382,7 @@ data:
     \   \"regex\": \"__meta_kubernetes_pod_label_(.+)\"\n  - \"action\": \"replace\"\n
     \   \"regex\": \"([^:]+)(?::\\\\d+)?\"\n    \"replacement\": \"$1:9100\"\n    \"source_labels\":
     \n    - \"__address__\"\n    \"target_label\": \"__address__\"\n  - \"action\":
-    \"keep\"\n    \"regex\": \"${NAMESPACE};node-exporter\"\n    \"source_labels\":
+    \"keep\"\n    \"regex\": \"prometheus;node-exporter\"\n    \"source_labels\":
     \n    - \"__meta_kubernetes_namespace\"\n    - \"__meta_kubernetes_pod_label_k8s_app\"\n
     \ - \"action\": \"replace\"\n    \"source_labels\": \n    - \"__meta_kubernetes_namespace\"\n
     \   \"target_label\": \"namespace\"\n  - \"action\": \"replace\"\n    \"source_labels\":
@@ -393,7 +393,7 @@ data:
     \   \"regex\": \"__meta_kubernetes_pod_label_(.+)\"\n  - \"action\": \"replace\"\n
     \   \"regex\": \"([^:]+)(?::\\\\d+)?\"\n    \"replacement\": \"$1:9090\"\n    \"source_labels\":
     \n    - \"__address__\"\n    \"target_label\": \"__address__\"\n  - \"action\":
-    \"keep\"\n    \"regex\": \"${NAMESPACE};prometheus\"\n    \"source_labels\": \n
+    \"keep\"\n    \"regex\": \"prometheus;prometheus\"\n    \"source_labels\": \n
     \   - \"__meta_kubernetes_namespace\"\n    - \"__meta_kubernetes_pod_label_k8s_app\"\n
     \ - \"action\": \"replace\"\n    \"source_labels\": \n    - \"__meta_kubernetes_namespace\"\n
     \   \"target_label\": \"namespace\"\n  - \"action\": \"replace\"\n    \"source_labels\":
