--- a/manifest/02-grafana-credentials-secret.yaml
+++ b/manifest/02-grafana-credentials-secret.yaml
@@ -2,11 +2,11 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: grafana
-  namespace: ${NAMESPACE}
+  namespace: prometheus
   labels:
     app.kubernetes.io/name: prometheus
     app.kubernetes.io/component: grafana
 type: Opaque
 data:
   admin-user: YWRtaW4=
-  admin-password: "$GRAFANA_PASSWORD"
+  admin-password: YWRtaW4=
