--- a/manifest/03-alertmanager-operated-service.yaml
+++ b/manifest/03-alertmanager-operated-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: alertmanager-operated
-  namespace: ${NAMESPACE}
+  namespace: prometheus
   labels:
     app.kubernetes.io/name: prometheus
     app.kubernetes.io/component: alertmanager
