--- a/manifest/03-alertmanager-service.yaml
+++ b/manifest/03-alertmanager-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: alertmanager
-  namespace: ${NAMESPACE}
+  namespace: prometheus
   labels:
     k8s-app: alertmanager
     app.kubernetes.io/name: prometheus
