--- a/manifest/03-grafana-service.yaml
+++ b/manifest/03-grafana-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: grafana
-  namespace: ${NAMESPACE}
+  namespace: prometheus
   labels:
     k8s-app: grafana
     app.kubernetes.io/name: prometheus
