--- a/manifest/03-kube-state-metrics-service.yaml
+++ b/manifest/03-kube-state-metrics-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kube-state-metrics
-  namespace: ${NAMESPACE}
+  namespace: prometheus
   labels:
     k8s-app: kube-state-metrics
     app.kubernetes.io/name: prometheus
