--- a/manifest/05-alertmanager-statefulset.yaml
+++ b/manifest/05-alertmanager-statefulset.yaml
@@ -1,19 +1,24 @@
-apiVersion: apps/v1beta2
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: alertmanager
+  namespace: prometheus
+---
+apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: alertmanager
-  namespace: ${NAMESPACE}
+  namespace: prometheus
   labels: &Labels
     k8s-app: alertmanager
     app.kubernetes.io/name: prometheus
     app.kubernetes.io/component: alertmanager
 spec:
-  serviceName: "alertmanager-operated"
+  serviceName: alertmanager-operated
   replicas: 2
   podManagementPolicy: OrderedReady
   updateStrategy:
     type: RollingUpdate
-  revisionHistoryLimit: 10
   selector:
     matchLabels: *Labels
   template:
@@ -23,16 +28,16 @@ spec:
       serviceAccountName: alertmanager
       containers:
         - name: alertmanager
-          image: learninghub/alertmanager:v1.0
+          image: srinisbook/alertmanager:v1.0
           imagePullPolicy: Always
           args:
             - --config.file=/etc/config/alertmanager.yml
-            - --storage.path=/data
+            - --storage.path=/alertmanager
             - --web.listen-address=:9093
             - --web.route-prefix=/
             - --mesh.listen-address=$(POD_IP):6783
-            - --mesh.peer=alertmanager-0.alertmanager-operated.${NAMESPACE}.svc:6783
-            - --mesh.peer=alertmanager-1.alertmanager-operated.${NAMESPACE}.svc:6783
+            - --mesh.peer=alertmanager-0.alertmanager-operated.=$(NAMESPACE).svc:6783
+            - --mesh.peer=alertmanager-1.alertmanager-operated.=$(NAMESPACE).svc:6783
             - --log.level=debug
           env:
           - name: POD_IP
@@ -40,6 +45,11 @@ spec:
               fieldRef:
                 apiVersion: v1
                 fieldPath: status.podIP
+          - name: NAMESPACE
+            valueFrom:
+              fieldRef:
+                apiVersion: v1
+                fieldPath: metadata.namespace
           ports:
             - containerPort: 9093
               name: http
@@ -55,19 +65,9 @@ spec:
             - name: config-volume
               mountPath: /etc/config
             - name: alertmanager-data
-              mountPath: "/data"
+              mountPath: "/alertmanager"
               subPath: ""
-          #resources:
-            #limits:
-              #cpu: 10m
-              #memory: 50Mi
-            #requests:
-              #cpu: 10m
-              #memory: 50Mi
-      volumes:
-        - name: config-volume
-          configMap:
-            name: alertmanager-config
+          resources: {}
       affinity:
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
@@ -78,13 +78,11 @@ spec:
                 values:
                 - alertmanager
             topologyKey: "kubernetes.io/hostname"
-  volumeClaimTemplates:
-  - metadata:
-      name: alertmanager-data
-    spec:
-      storageClassName: ${STORAGE_CLASS}
-      accessModes:
-        - ReadWriteOnce
-      resources:
-        requests:
-          storage: "2Gi"
+      volumes:
+        - name: config-volume
+          configMap:
+            name: alertmanager-config
+        - name: alertmanager-data
+          persistentVolumeClaim:
+            claimName: alertmanager-pvc
+      
