--- a/manifest/05-node-exporter-daemonset.yaml
+++ b/manifest/05-node-exporter-daemonset.yaml
@@ -1,8 +1,14 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: node-exporter
+  namespace: prometheus
+---
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
   name: node-exporter
-  namespace: ${NAMESPACE}
+  namespace: prometheus
   labels:
     k8s-app: node-exporter
     app.kubernetes.io/name: prometheus
@@ -10,15 +16,16 @@ metadata:
 spec:
   updateStrategy:
     type: OnDelete
+  selector:
+    matchLabels: *Labels
   template:
     metadata:
-      labels:
-        k8s-app: node-exporter
+      labels: *Labels
     spec:
       serviceAccountName: node-exporter
       containers:
-        - name: prometheus-node-exporter
-          image: learninghub/nodeexporter:v1.0
+        - name: node-exporter
+          image: srinisbook/node-exporter:v1.0
           imagePullPolicy: Always
           args:
             - --path.procfs=/host/proc
@@ -34,13 +41,7 @@ spec:
             - name: sys
               mountPath: /host/sys
               readOnly: true
-          #resources:
-            #limits:
-              #cpu: 10m
-              #memory: 50Mi
-            #requests:
-              #cpu: 10m
-              #memory: 50Mi
+          resources: {}
       hostNetwork: true
       hostPID: true
       volumes:
