--- a/manifest/05-prometheus-statefulset.yaml
+++ b/manifest/05-prometheus-statefulset.yaml
@@ -1,8 +1,48 @@
-apiVersion: apps/v1beta2
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: prometheus
+  namespace: prometheus
+---
+apiVersion: rbac.authorization.k8s.io/v1beta1
+kind: ClusterRole
+metadata:
+  name: prometheus
+  namespace: prometheus
+rules:
+- apiGroups: [""]
+  resources:
+  - nodes
+  - nodes/metrics
+  - services
+  - endpoints
+  - pods
+  verbs: ["get", "list", "watch"]
+- apiGroups: [""]
+  resources: ["configmaps"]
+  verbs: ["get"]
+- nonResourceURLs: ["/metrics", "/metrics/cadvisor"]
+  verbs: ["get"]
+---
+apiVersion: rbac.authorization.k8s.io/v1beta1
+kind: ClusterRoleBinding
+metadata:
+  name: prometheus
+  namespace: prometheus
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: prometheus
+subjects:
+- kind: ServiceAccount
+  name: prometheus
+  namespace: prometheus
+---
+apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: prometheus
-  namespace: ${NAMESPACE}
+  namespace: prometheus
   labels: &Labels
     k8s-app: prometheus
     app.kubernetes.io/name: prometheus
@@ -24,18 +64,18 @@ spec:
       - name: "init-chown-data"
         image: busybox:latest
         imagePullPolicy: Always
-        command: ["chown", "-R", "65534:65534", "/data"]
+        command: ["chown", "-R", "65534:65534", "/prometheus"]
         volumeMounts:
         - name: prometheus-data
-          mountPath: /data
+          mountPath: /prometheus
           subPath: ""
       containers:
-        - name: prometheus-server
-          image: learninghub/prometheus:v1.0
+        - name: prometheus
+          image: srinisbook/prometheus:v1.0
           imagePullPolicy: "IfNotPresent"
           args:
             - --config.file=/etc/config/prometheus.yaml
-            - --storage.tsdb.path=/data
+            - --storage.tsdb.path=/prometheus
             - --web.console.libraries=/etc/prometheus/console_libraries
             - --web.console.templates=/etc/prometheus/consoles
             - --web.enable-lifecycle
@@ -53,21 +93,13 @@ spec:
               port: 9090
             initialDelaySeconds: 30
             timeoutSeconds: 30
-          #resources:
-            #requests:
-              #cpu: 200m
-              #memory: 1000Mi
+          resources: {}
           volumeMounts:
-            - name: config-volume
+            - name: config-data
               mountPath: /etc/config
             - name: prometheus-data
-              mountPath: /data
+              mountPath: /prometheus
               subPath: ""
-      terminationGracePeriodSeconds: 300
-      volumes:
-        - name: config-volume
-          configMap:
-            name: prometheus-config
       affinity:
         podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
@@ -78,14 +110,10 @@ spec:
                 values:
                 - prometheus
             topologyKey: "kubernetes.io/hostname"
-  volumeClaimTemplates:
-  - metadata:
-      name: prometheus-data
-      labels: *Labels
-    spec:
-      storageClassName: ${STORAGE_CLASS}
-      accessModes:
-        - ReadWriteOnce
-      resources:
-        requests:
-          storage: "16Gi"
+      volumes:
+        - name: config-data
+          configMap:
+            name: prometheus-config
+        - name: prometheus-data
+          persistentVolumeClaim:
+            claimName: prometheus-pvc
