--- a/prometheus-ingress.yaml
+++ b/prometheus-ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: grafana-ingress
+  name: prometheus-ingress
   namespace: prometheus
   annotations:
     kubernetes.io/ingress.class: nginx
@@ -11,13 +11,13 @@ metadata:
 spec:
   tls:
    - hosts:
-       - grafana.domain.com
+       - prometheus.domain.com
      secretName: domain-com
   rules:
-   - host: grafana.domain.com
+   - host: prometheus.domain.com
      http:
        paths:
         - path: /
           backend:
-           serviceName: grafana
-           servicePort: 80
+           serviceName: prometheus
+           servicePort: 9090
