--- a/manifest/04-prometheus-pvc.yaml
+++ b/manifest/04-prometheus-pvc.yaml
@@ -4,8 +4,10 @@ metadata:
   name: prometheus-pvc
   namespace: prometheus
 spec:
+# storageClassName: nfs
   accessModes:
     - ReadWriteOnce
+#   - ReadWriteMany
   resources:
     requests:
       storage: 100Gi
