--- a/manifest/05-alertmanager-statefulset.yaml
+++ b/manifest/05-alertmanager-statefulset.yaml
@@ -15,7 +15,7 @@ metadata:
     app.kubernetes.io/component: alertmanager
 spec:
   serviceName: alertmanager-operated
-  replicas: 2
+  replicas: 1
   podManagementPolicy: OrderedReady
   updateStrategy:
     type: RollingUpdate
@@ -37,7 +37,7 @@ spec:
             - --web.route-prefix=/
             - --mesh.listen-address=$(POD_IP):6783
             - --mesh.peer=alertmanager-0.alertmanager-operated.=$(NAMESPACE).svc:6783
-            - --mesh.peer=alertmanager-1.alertmanager-operated.=$(NAMESPACE).svc:6783
+            #- --mesh.peer=alertmanager-1.alertmanager-operated.=$(NAMESPACE).svc:6783
             - --log.level=debug
           env:
           - name: POD_IP
@@ -85,4 +85,15 @@ spec:
         - name: alertmanager-data
           persistentVolumeClaim:
             claimName: alertmanager-pvc
+  # volumeClaimTemplates:
+  # - metadata:
+  #     name: alertmanager-data
+  #     labels: *Labels
+  #   spec:
+  #     storageClassName: default
+  #     accessModes:
+  #    - ReadWriteOnce
+  #     resources:
+  #         requests:
+  #         storage: "100Gi"
       
