--- a/manifests/04prometheus-pvc.yaml
+++ b/manifests/04prometheus-pvc.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: prometheus-pvc
+  name: prometheus-data
   namespace: prometheus
 spec:
-# storageClassName: nfs
+# storageClassName: nfs|efs
   accessModes:
     - ReadWriteOnce
 #   - ReadWriteMany
   resources:
     requests:
-      storage: 100Gi
+      storage: 500Gi
